--- a/url-shortner-app/tsconfig.json
+++ b/url-shortner-app/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@tsconfig/node20",
+  "extends": "@tsconfig/node20"
   // "compilerOptions": {
   //   /* Visit https://aka.ms/tsconfig to read more about this file */
 
