fix: POSTGRES_DATABASE should use `url-shortner-db` instead "url_shortner_db"
chore: update Dockerfile, Makefile, and .env.example files

- Updated Dockerfile to use last Postgres
- Added Makefile targets for running and cleaning up infrastructure
- Updated .env.example with correct Postgres database name and Redis password

--- a/url-shortner-app/.env.example
+++ b/url-shortner-app/.env.example
@@ -3,7 +3,7 @@ SERVER_PORT=3000
 DB_POSTGRES_HOST="localhost"
 DB_POSTGRES_USERNAME="docker"
 DB_POSTGRES_PASSWORD="docker"
-DB_POSTGRES_DATABASE="url_shortner_db"
+DB_POSTGRES_DATABASE="url-shortner-db"
 DB_POSTGRES_PORT=5432
 
 DB_REDIS_HOST="localhost"
