--- a/url-shortner-app/.env.example
+++ b/url-shortner-app/.env.example
@@ -1,3 +1,5 @@
+LOGGING_LEVEL="debug"
+
 SERVER_PORT=3000
 
 DB_POSTGRES_HOST="localhost"
@@ -9,3 +11,4 @@ DB_POSTGRES_PORT=5432
 DB_REDIS_HOST="localhost"
 DB_REDIS_PORT=6379
 DB_REDIS_PASSWORD="docker"
+
