--- a/url-shortner-app/package.json
+++ b/url-shortner-app/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
     "pg": "^8.11.3",
-    "redis": "^4.6.13"
+    "redis": "^4.6.13",
+    "winston": "^3.12.0"
   }
 }
