--- a/url-shortner-app/package.json
+++ b/url-shortner-app/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "dev:nodemon": "nodemon --inspect ./src/server.ts",
     "dev": "tsx --watch ./src/server.ts",
-    "setup": "tsx --inspect ./src/setup.ts",
+    "setup:db": "tsx --inspect ./src/setup.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
