--- a/url-shortner-app/package.json
+++ b/url-shortner-app/package.json
@@ -27,6 +27,7 @@
     "fastify": "^4.26.2",
     "pg": "^8.11.3",
     "redis": "^4.6.13",
-    "winston": "^3.12.0"
+    "winston": "^3.12.0",
+    "zod": "^3.22.4"
   }
 }
