--- a/url-shortner-app/package.json
+++ b/url-shortner-app/package.json
@@ -24,6 +24,9 @@
     "typescript": "^5.4.3"
   },
   "dependencies": {
+    "@fastify/cors": "^9.0.1",
+    "@fastify/helmet": "^11.1.1",
+    "@fastify/rate-limit": "^9.1.0",
     "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
     "pino": "^8.19.0",
