--- a/url-shortner-app/package.json
+++ b/url-shortner-app/package.json
@@ -28,6 +28,8 @@
     "@fastify/helmet": "^11.1.1",
     "@fastify/rate-limit": "^9.1.0",
     "@fastify/static": "^7.0.1",
+    "@fastify/swagger": "^8.14.0",
+    "@fastify/swagger-ui": "^3.0.0",
     "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
     "pino": "^8.19.0",
