feat: implement HTTPS support
This commit adds HTTPS support to the application by generating a self-signed certificate and setting up the Fastify server to use it. This provides a secure channel for communication between the client and the server.

--- a/url-shortner-app/Makefile
+++ b/url-shortner-app/Makefile
@@ -13,4 +13,6 @@ connect-postgres:
 
 connect-redis:
 	docker run --rm -it --network=host bitnami/redis redis-cli -h $(DB_REDIS_HOST) -a $(DB_REDIS_PASSWORD)
-	
+
+generate-certificates:
+	openssl req -newkey rsa:2048 -nodes -keyout https/fastify.key -x509 -days 365 -out https/fastify.cert
