feat: introduce connection url for postgres and redis services

--- a/url-shortner-app/.env.example
+++ b/url-shortner-app/.env.example
@@ -7,8 +7,9 @@ DB_POSTGRES_USERNAME="docker"
 DB_POSTGRES_PASSWORD="docker"
 DB_POSTGRES_DATABASE="url-shortner-db"
 DB_POSTGRES_PORT=5432
+DB_POSTGRES_CONNECTION_URL=
 
 DB_REDIS_HOST="localhost"
 DB_REDIS_PORT=6379
 DB_REDIS_PASSWORD="docker"
-
+DB_REDIS_CONNECTION_URL=
