fix: update RESTClient and environment configuration
This commit updates the RESTClient and environment configuration to use HTTPS instead of HTTP, adds a .env file to the watch list in nodemon, and includes the fastify types in tsconfig.json.

--- a/url-shortner-app/.env.example
+++ b/url-shortner-app/.env.example
@@ -1,3 +1,5 @@
+NODE_ENV=
+
 LOGGING_LEVEL="debug"
 
 SERVER_PORT=3000
@@ -7,9 +9,9 @@ DB_POSTGRES_USERNAME="docker"
 DB_POSTGRES_PASSWORD="docker"
 DB_POSTGRES_DATABASE="url-shortner-db"
 DB_POSTGRES_PORT=5432
-DB_POSTGRES_CONNECTION_URL=
+# DB_POSTGRES_CONNECTION_URL="postgresql://docker:docker@localhost:5432/url-shortner-db?"
 
 DB_REDIS_HOST="localhost"
 DB_REDIS_PORT=6379
 DB_REDIS_PASSWORD="docker"
-DB_REDIS_CONNECTION_URL=
+DB_REDIS_CONNECTION_URL="redis://default:docker@localhost:6379/1"
