--- a/app/package.json
+++ b/app/package.json
@@ -9,8 +9,9 @@
   "license": "ISC",
   "author": "Anderson Bosa < https://andersonbosa.vercel.app >",
   "scripts": {
-    "dev:nodemon": "nodemon --inspect ./src/server.ts",
+    "start": "tsx ./src/server.ts",
     "dev": "tsx --inspect --watch ./src/server.ts",
+    "dev:nodemon": "nodemon --inspect ./src/server.ts",
     "setup:db": "tsx --inspect ./src/setup.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
