--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@tsconfig/node20": "^20.1.2",
     "@types/node": "^20.11.30",
+    "@types/uuid": "^9.0.8",
     "nodemon": "^3.1.0",
     "pino-pretty": "^11.0.0",
     "ts-node": "^10.9.2",
@@ -36,6 +37,7 @@
     "pino": "^8.19.0",
     "postgres": "^3.4.4",
     "redis": "^4.6.13",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
   }
 }
