--- a/app/.gitignore
+++ b/app/.gitignore
@@ -92,7 +92,7 @@ out
 
 # Nuxt.js build / generate output
 .nuxt
-dist
+# dist
 
 # Gatsby files
 .cache/
@@ -101,7 +101,7 @@ dist
 # public
 
 # vuepress build output
-.vuepress/dist
+# .vuepress/dist
 
 # vuepress v2.x temp and cache directory
 .temp
