--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,8 @@
     "@types/uuid": "^9.0.8",
     "nodemon": "^3.1.0",
     "pino-pretty": "^11.0.0",
+    "pre-commit": "^1.2.2",
+    "rimraf": "^5.0.5",
     "ts-node": "^10.9.2",
     "tsx": "^4.7.1",
     "typescript": "^5.4.3"
