chore: update package.json and vercel.json configurations
Update package.json dependencies, include paths, and engines. Update vercel.json configuration based on the new package.json changes.

--- a/app/package.json
+++ b/app/package.json
@@ -12,9 +12,9 @@
     "build": "rimraf dist && tsc",
     "build:add":"git add dist",
     "typecheck": "tsc --project tsconfig.json",
-    "start": "tsx ./src/server.ts",
-    "dev:nodemon": "nodemon --inspect ./src/server.ts",
-    "setup:db": "tsx --inspect ./src/setup.ts"
+    "start": "tsx src/server.ts",
+    "dev:nodemon": "nodemon --inspect src/server.ts",
+    "setup:db": "tsx --inspect src/setup.ts"
   },
   "pre-commit":[
     "typecheck",
@@ -45,5 +45,8 @@
     "redis": "^4.6.13",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
+  },
+  "engines": {
+    "node": ">=20"
   }
 }
